syntax = "proto3";

package journalpb;

import "google/protobuf/empty.proto";

option go_package = "protos/journalpb";

service JournalService{
  rpc RegisterJournal(RegisterJournalRequest) returns (Journal);
  rpc GetJournal (GetJournalRequest) returns (Journal);
  rpc UpdateJournal(Journal) returns (Journal);
  rpc DeleteJournal(DeleteJournalRequest) returns (google.protobuf.Empty);
}

message Journal{
  string id = 1;
  string schedule_id = 2;
  string student_id = 3;
  bool  attended = 4;
  int32 mark= 5;
}
message RegisterJournalRequest{
  string schedule_id = 1;
  string student_id = 2;
  bool  attended = 3;
  int32 mark=4;
}
message GetJournalRequest{
  string id = 1;
}
message DeleteJournalRequest{
  string id = 1;
}